@@ -80,8 +80,7 @@ by specifying something about it. You may for example say
 </p>
   <pre>
 .and: mykind
-..attr:: attributename</pre><! --  end pre
- -->
+..attr:: attributename</pre>
   <p>
  This means you have added an aspect to mykind. It now means that it is
 a (Python) object having an attribute named attributename. A test can
@@ -180,6 +179,5 @@ HOOKS
 
 Entering GSL mode calls with no arguments the value of the variable
 `gsl-mode-hook', if that value exists and is not nil; see the `Hooks'
-section of the Elisp manual for details.</pre><! --  end pre
- -->
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed May 14 11:31:36 2008</div></body></html>
+section of the Elisp manual for details.</pre>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue May 20 14:42:28 2008</div></body></html>
