@@ -242,8 +242,7 @@ Partition of a set of 5 objects. Total size = 220 bytes.
      1      2  40       56  25       192  87 list
      2      1  20       16   7       208  95 float
      3      1  20       12   5       220 100 int
-&gt;&gt;&gt; </pre><! --  end pre
- --></dd></dl></dd>
+&gt;&gt;&gt; </pre></dd></dl></dd>
      <dd>
       <dl>
        <dt><strong>Note</strong></dt>
@@ -312,7 +311,7 @@ it.
  The target process needs to be enabled to accept remote
 monitoring. This is implemented via a thread that tries to connect to a
 particular socket. This thread can be started in the following way:
-</p><! --  sigh, .pre makes to much veritcal space -->
+</p>
       <p><code>import guppy.heapy.RM</code></p>
       <p>
 
@@ -328,10 +327,9 @@ take over the processes that accept remote monitoring.
  A process may disable remote monitoring of itself in the
 following way:
 </p>
-      <p><! --  pre takes too much space --><code>
+      <p><code>
 
-from guppy.heapy.Remote import off; off()</code><! --  end pre
- --></p></dd>
+from guppy.heapy.Remote import off; off()</code></p></dd>
      <dd>
       <dl>
        <dt><strong>Example</strong></dt>
@@ -376,8 +374,7 @@ Partition of a set of 21919 objects. Total size = 1558688 bytes.
      9     52   0    27040   2   1436516  92 dict of __main__.Card
 &lt;62 more rows. Type e.g. '_.more' to view.&gt;
 &gt;&gt;&gt; .
-&lt;Monitor&gt; exit</pre><! --  end pre
- --></dd></dl></dd></dl></dd>
+&lt;Monitor&gt; exit</pre></dd></dl></dd></dl></dd>
    <dd><a name='heapykinds.Use.pb'><strong><big>pb</big></strong></a>( [<var>filename</var><code>:</code>&nbsp;<em>profilefilename+</em>])
     <dl>
      <dd> Create a Profile Browser window.</dd>
@@ -395,8 +392,7 @@ doing the following from time to time:
           <pre>
 
 &gt;&gt; from guppy import hpy
-&gt;&gt; hpy().heap().stat.dump(filename)</pre><! --  end pre
- -->
+&gt;&gt; hpy().heap().stat.dump(filename)</pre>
  The dump method appends a sample to the end of the file,
 containing a summary description of the current heap contents. The
 sequence of such samples can be browsed in the Profile Browser window.
@@ -580,8 +576,7 @@ only if they are identical, i.e. have the same address.</dd></dl></dd>
          <dd>
           <dl>
            <dt><var>address</var><code>:</code>&nbsp;<em>objectaddress+</em></dt>
-           <dd> The argument should be the address of an object.<! -- XXX(which must exist in the heap, due to current implementation).
- --></dd></dl></dd></dl></dd></dl></dd>
+           <dd> The argument should be the address of an object.</dd></dl></dd></dl></dd></dl></dd>
      <dd> )</dd></dl></dd>
    <dd><a name='heapykinds.Use.Module'><strong><big>Module</big></strong></a></dd>
    <dd>
@@ -768,7 +763,6 @@ to distinguish it from ordinary locals, and still
 use a syntax that could be used to access those variables directly from Python.</td></tr>
              <tr>
               <th><code> .keys()[integer]</code></th>
-              <td> A key in a dictionary, at the indicated place in its keys().</td><! --  XXX __dict__.keys() - not used - should think about this
- --></tr></table></dd></dl></dd></dl></dd></dl></dd>
+              <td> A key in a dictionary, at the indicated place in its keys().</td></tr></table></dd></dl></dd></dl></dd></dl></dd>
      <dd> )</dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed May 14 11:31:36 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue May 20 14:42:28 2008</div></body></html>
