@@ -1,5 +1,7 @@
 #._cv_part guppy.etc.Help
 
+from guppy.etc.PrettyPrintHTML import prettyPrintHTML
+
 class HelpPrinter:
     def __init__(self, msg):
         self.msg = msg
@@ -17,15 +19,23 @@ class Help:
         return repr(self)
 
     def __repr__(self):
+        return ''
+
+
+    def getlongrepr(self):
+        from StringIO import StringIO
+        f=StringIO()
+
         return self.msg+"""\
 <Type e.g. '_.<subject> for help subject'>"""
-
+        
 
 class _GLUECLAMP_:
     pass
 
 def test():
     pass
+
 
 print 'hello'
 
@@ -34,6 +44,9 @@ Attributes: a,b,c
 """, {})
 print h
 
+f = open( '/home/sverker/guppy/doc/guppy.html' )
+html=f.read()
+text= prettyPrintHTML(html)
 
 class Helper:
     pass
